fix overflow issues

--- a/src/styles/xj.css
+++ b/src/styles/xj.css
@@ -141,6 +141,7 @@ a {
   box-sizing: border-box;
   display: none;
   text-align: center;
+  overflow: scroll;
 }
 
 .detail-view {
@@ -231,4 +232,14 @@ button.MuiButtonBase-root.MuiIconButton-root:first-of-type:after {
   background-size: 100%;
   position: absolute;
   left: 0;  
+}
+
+.app svg {
+  overflow: initial;
+}
+
+@media only screen and (max-width: 768px) {
+  .links {
+    display: none;
+  }
 }
